@@ -43,6 +43,10 @@
 #include "cl_lists.h"
 #include "cl_commlib.h"
 
+/* counters */
+static int snd_messages = 0;
+static int events_received = 0;
+
 void sighandler_client(int sig);
 static int pipe_signal = 0;
 static int hup_signal = 0;
@@ -78,6 +82,8 @@ int sig
 extern int main(int argc, char** argv)
 {
   struct sigaction sa;
+  struct timeval now;
+  time_t last_time = 0;
   int i,first_message_sent = 0;
 
 
@@ -116,39 +122,55 @@ extern int main(int argc, char** argv)
   cl_com_get_connect_port(handle, &i);
   printf("connecting to port \"%d\" on host \"%s\"\n", i, argv[3]);
 
-  
+  printf("virtual event client is running ...\n");
   while(do_shutdown == 0) {
      int                retval  = 0;
      cl_com_message_t*  message = NULL;
      cl_com_endpoint_t* sender  = NULL;
-     printf("virtual event client is running ...\n");
+
+     gettimeofday(&now,NULL);
+     if (now.tv_sec != last_time) {
+        printf("virtual event client message count[sent |%d|] events[received |%d|]...\n", snd_messages,events_received);
+        last_time = now.tv_sec;
+     }
 
      retval = cl_commlib_receive_message(handle, NULL, NULL, 0,      /* handle, comp_host, comp_name , comp_id, */
                                          1, 0,                       /* syncron, response_mid */
                                          &message, &sender );
      if ( retval != CL_RETVAL_OK) {
         if ( retval == CL_RETVAL_CONNECTION_NOT_FOUND ) {
-            printf("===================\n");
+#if 0
             printf("opening connection to %s/%s/%d\n", argv[3], "virtual_master", 1);
+#endif
             retval = cl_commlib_open_connection(handle, argv[3], "virtual_master", 1);
             if (retval == CL_RETVAL_OK) {
                first_message_sent = 0; 
             } 
         }
      } else {
+#if 0
         printf("received message from %s/%s/%ld: \"%s\" (%ld bytes)\n", sender->comp_host,sender->comp_name,sender->comp_id, message->message, message->message_length);
+#endif
+        events_received++;
         cl_com_free_message(&message);
         cl_com_free_endpoint(&sender);
      }
+#if 0
      printf("status: %s\n",cl_get_error_text(retval));
+#endif
 
      if (  first_message_sent == 0) {
         first_message_sent = 1;
         retval = cl_commlib_send_message(handle, argv[3], "virtual_master", 1,
-                                         CL_MIH_MAT_NAK,
+                                         CL_MIH_MAT_ACK,
                                          (cl_byte_t*) "event" , 6,
-                                         NULL, 0, 0 , 1, 0 );
+                                         NULL, 0, 0 , 1, 1 );
+        if (retval == CL_RETVAL_OK) {
+           snd_messages++;
+        }
+#if 0
         printf("sending a event hello message: %s\n",cl_get_error_text(retval) );
+#endif
      }
   }
 
